# ikavault-solana

./: .gitignore  AUDIT.md  AUDIT_HU.md  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
client/: Cargo.toml
client/src/: dwallet.rs  encrypt.rs  main.rs  walrus.rs
docs/sessions/: 2026-04-21_revert-scope-creep.txt  2026-04-21_website-scaffold.txt  2026-04-22_stablecoin-refactor.txt
extension/: manifest.json  package-lock.json  package.json  popup.html  tailwind.config.js  tsconfig.json  vite.config.ts
extension/src/background/: index.ts
extension/src/content/: index.ts
extension/src/lib/: encrypt.ts  encryption.ts  errors.ts  ikavault_idl.json  messaging.ts  solana.ts  types.ts  walrus.ts  web3auth.ts
extension/src/popup/: App.tsx  index.css  index.tsx
extension/src/popup/views/: AddEntryView.tsx  EntryDetailView.tsx  LoginView.tsx  PinSetupView.tsx  PinUnlockView.tsx  VaultView.tsx
programs/encrypt-search/: Cargo.toml
programs/encrypt-search/src/: lib.rs
programs/ikavault/: Cargo.toml
programs/ikavault/src/: errors.rs  lib.rs  state.rs
programs/ikavault/src/instructions/: add_entry.rs  delete_entry.rs  init_vault.rs  mod.rs  share_entry.rs  update_entry.rs
tests/: ikavault.ts  integration.ts
website/: .env.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
website/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
website/app/changelog/: page.tsx
website/app/docs/: page.tsx
website/app/pricing/: page.tsx
website/components/hero/: Hero.tsx  SplitKeyOrb.tsx
website/components/payment/: ChainSelector.tsx  PaymentModal.tsx  Pricing.tsx
website/components/sections/: Architecture.tsx  Dogfood.tsx  Features.tsx  Footer.tsx  HowItWorks.tsx  Nav.tsx  Roadmap.tsx  Security.tsx
website/lib/: plans.ts  useChainPreference.ts
website/lib/payment/: solana.ts  sui.ts
website/public/: ws-resources.json
