[workspace]
members = [
    "programs/ikavault",
    "client",
]
# Note: programs/encrypt-search is an Encrypt FHE program (not Anchor).
# Build it separately with: cargo build --manifest-path programs/encrypt-search/Cargo.toml
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.31"
solana-program = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
